# pico-playground

./: .gitignore  AGENTS.md  Anal_ogue.dump  Bromance-Intro.log.zst  Bromance-Intro.sid  Bromance-Intro.sid.dump  Bromance-Intro.ssf.zst  CMakeLists.txt  Dark_introlong.log.zst  Dark_introlong.ssf.zst  Mojo.log.zst  Mojo.sid.dump  Mojo.ssf.zst  Still.log.zst  Still.sid.dump  Still.ssf.zst  checkusbmodem.sh  dump.dump  hej.txt  resume.md  sidtap2serial  termtracker  test  testdump.tmp
apps/: CMakeLists.txt
apps/picoSid-synth/: CMakeLists.txt  tusb_config.h
apps/picoSid-synth/lib/reSID16/: wave.h
apps/picoSid-synth/src/: main.cpp  sid_engine.cpp  sid_engine.h  usb_descriptors.c
apps/usb_serial_probe/: CMakeLists.txt
apps/usb_serial_probe/src/: main.c
docs/: beta99.md  sidtap2serial.md
scanvideo/: CMakeLists.txt  font8x8_basic.inc
scanvideo/siddler_pico/: CMakeLists.txt  FDIS_README.md  siddler_audio.cpp  siddler_audio.h  siddler_pico.c  tusb_config.h  usb_descriptors.c
standalone/square_wave/: CMakeLists.txt  square_wave.c
stdio/usb_serial_echo/: CMakeLists.txt  README.md  usb_serial_echo.c
tools/: CMakeLists.txt  beta99_pack.py  oddtracker.c  sid2serial.c  sidripper  sidripper.c  sidtap2serial  sidtap2serial.c  ssf2serial  ssf2serial.c  termtracker  termtracker.c
tools/vendor-wheels/: fonttools-4.61.0-cp314-cp314-macosx_10_15_universal2.whl  kiwisolver-1.4.9-cp314-cp314-macosx_11_0_arm64.whl  zstandard-0.25.0-cp314-cp314-macosx_11_0_arm64.whl
